# creative-prediction

./: .gitignore  MNIST-Tensorflow.ipynb  README.md  charRNN-keras-embedding.ipynb  charRNN-keras.ipynb  charRNN-star-trek-titles.ipynb  feed.xml  get_datasets.sh  index.html  manifest.json  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  startrekepisodes.txt  sw.js
404/: index.html
assets/: search.json  styles.css  styles.css.map
blog/: index.html
chalkboard-redux/: plugin.js
datasets/: TinyPerformanceArrays.npz  melody_training_dataset.npz  metatone_performances_dataframe.h5  startrekepisodes.txt  tiny_performance_datasets.npz  waltzing-matilda.mid
docs/: CNAME  Gemfile  _config.yml  creative-prediction-intro  creative-prediction-intro.md  imps.md  index.md  nime.md  presentations.md  presenters.md  schedule.md  setup.md  tutorials.md  workshop.md
hack/: index.html
imps/: index.html
magenta-models/: magenta_improv_go.sh  polyphony_go.sh
notebooks/: 0-test-setup.ipynb  1-star-trek-titles-RNN-basic.ipynb  2-star-trek-titles-advanced.ipynb  3-zeldic-musical-RNN.ipynb  4-gesture-rnn.ipynb  5-mdn-sine-prediction.ipynb  6-MDN-RNN-kanji-generation.ipynb  7-MDN-Robojam-touch-generation.ipynb  7-MDN-Robojam-touch-generation.slides.html  8-LittleGAN.ipynb  9-DoomVAE.ipynb  VAE_Doom.ipynb  charlesmovegan.ipynb  keras-startrek-LSTM-model.keras  mdn-talk-examples.ipynb  melody_training_dataset.npz  robojam-new-data-generator.ipynb  robojam-production-model.ipynb  robojam-train-metatonedata.ipynb  train_melody_rnn.py  zeldic-RNN-all-voices.ipynb  (+1 more)
(+171 files in other folders)
